charts/templates/s3www/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: file-server-ingress
  namespace: file-server
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /document.gif
spec:
  ingressClassName: nginx
  rules:
    - host: s3www-up42.nip.io   # Using nip.io for automatic DNS resolution
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: file-server-s3www
                port:
                  number: 80
